particles.js completed

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <title>I am Doggy</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/particles.min.js"></script>
-    <script src="js/set.js"></script>
 
 </head>
 
@@ -14,5 +12,9 @@
     <header id="particles-js">
         <h1>I am Doggy</h1>
     </header>
+    
+    <script src="js/particles.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
+
 </html>
